fixing z-index

--- a/src/components/GameOver/GameOver.module.scss
+++ b/src/components/GameOver/GameOver.module.scss
@@ -51,6 +51,8 @@ text-transform: uppercase;
 font-family: Barlow Semi Condensed;
 
 cursor: pointer;
+position: relative;
+z-index: 10;
 }
 
 .btn:hover, .btn:focus{
