--- a/src/components/GameStarted/GameStarted.module.scss
+++ b/src/components/GameStarted/GameStarted.module.scss
@@ -84,6 +84,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     width: 288px;
     height: 284px;
     position: absolute;
+    z-index: 1;
     top: -74px;
     left: -32px;
     background-repeat: no-repeat;
