--- a/src/components/ModalRules/ModalRules.module.scss
+++ b/src/components/ModalRules/ModalRules.module.scss
@@ -48,6 +48,7 @@ cursor: pointer;
 
 @media only screen and (min-width: 768px) {
   margin: 0;
+  z-index: 10;
 }
 }
 
